# versatiles-glyphs-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml  pages.yml  release.yml
pages/: .prettierrc  build.sh
pages/web/: index.html
pages/web/assets/lib/versatiles-style/: versatiles-style.js
scripts/: bloat.sh  check.sh  docs.sh  get_version.sh  graph.sh  install.sh  profile_recurse.sh  release.sh  test_debug.sh  test_merge.sh  test_multiple.sh  test_recurse.sh  unused_dependencies.sh  upgrade_dependencies.sh
src/: lib.rs  main.rs
src/commands/: convert.rs  debug.rs  merge.rs  mod.rs  recurse.rs
src/font/: character_block.rs  entry.rs  file_entry.rs  font.rs  font_family.rs  font_file_entry.rs  font_manager.rs  font_metadata.rs  font_renderer.rs  glyph_block.rs  glyph_chunk.rs  index_files.rs  manager.rs  metadata.rs  mod.rs  parse_font_name.rs  renderer.rs  wrapper.rs
src/geometry/: bbox.rs  mod.rs  point.rs  ring.rs  rings.rs  segment.rs
src/glyph/: mod.rs  outline.rs  render_glyph.rs  render_range.rs  ring_builder.rs
src/lib/: mod.rs
src/lib/font/: font_manager.rs  mod.rs
src/lib/geometry/: bbox.rs  point.rs  ring.rs  rings.rs
src/lib/glyph/: mod.rs  outline.rs  render_range.rs
src/lib/protobuf/: composite.rs  mod.rs  protobuf.rs
src/lib/sdf/: mod.rs  render_sdf.rs  rtree_segments.rs
src/libraries/: composite.rs  decompress.rs  font.rs  glyphs.rs  mod.rs  protobuf.rs
src/libraries/geometry/: bbox.rs  point.rs  ring.rs  rings.rs  segment.rs
src/libraries/glyph/: glyph_info.rs  mod.rs  outline.rs  ring_builder.rs
src/libraries/sdf/: _geometry.rs  mod.rs  render.rs  rtree.rs
src/proto/: glyphs.proto
src/protobuf/: composite.rs  fontstack.rs  glyph.rs  glyphs.rs  mod.rs  pbf_glyphs.rs  proto.rs
src/render/: mod.rs  render_glyph.rs  render_result.rs  renderer.rs  renderer_dummy.rs  renderer_precise.rs  result.rs  ring_builder.rs  rtree_segments.rs  traits.rs
src/renderer/: glyph.rs  mod.rs  render_dummy.rs  render_glyph.rs  render_precise.rs  render_result.rs  renderer_dummy.rs  renderer_precise.rs  traits.rs
src/sdf/: mod.rs  render_sdf.rs  rtree_segments.rs
src/utils/: decode_bitmap.rs  mod.rs  output_directory.rs  progress_bar.rs  regex.rs  tar.rs
src/writer/: dummy.rs  file.rs  mod.rs  tar.rs  traits.rs
