[package]
name = "versatiles_glyphs"
version = "0.7.1"
edition = "2021"
description = "A tool for generating SDF glyphs from fonts."
license = "Unlicense"
repository = "https://github.com/versatiles-org/versatiles-glyphs-rs"
exclude = [
	".github",
	".gitignore",
	"codecov.yml",
	"pages",
	"rust-toolchain.toml",
	"rustfmt.toml",
	"scripts",
	"testdata",
]

[lib]
name = "versatiles_glyphs"
path = "src/lib.rs"

[[bin]]
name = "versatiles_glyphs"
path = "src/main.rs"
required-features = ["cli"]

[profile.dev]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
panic = "unwind"
incremental = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = false
strip = true

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive", "std"], optional = true }
indicatif = "0.18.0"
prost = "0.14.1"
rayon = "1.10.0"
regex-lite = "0.1.6"
rstar = "0.12.2"
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.142", optional = true }
ttf-parser = { version = "0.25.1", features = ["std"] }

[dev-dependencies]
tar = "0.4.44"
tempfile = "3.20.0"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:serde_json", "dep:serde"]
