[package]
name = "versatiles_glyphs"
version = "0.9.0"
edition = "2021"
rust-version = "1.85"
description = "A tool for generating SDF glyphs from fonts."
license = "Unlicense"
repository = "https://github.com/versatiles-org/versatiles-glyphs-rs"
documentation = "https://docs.rs/versatiles_glyphs"
readme = "README.md"
keywords = ["font", "glyph", "sdf", "ttf", "maplibre"]
categories = ["graphics", "rendering", "command-line-utilities"]
exclude = [
	".github",
	".gitignore",
	"codecov.yml",
	"pages",
	"rust-toolchain.toml",
	"rustfmt.toml",
	"scripts",
	"testdata",
]

[lib]
name = "versatiles_glyphs"
path = "src/lib.rs"

[[bin]]
name = "versatiles_glyphs"
path = "src/main.rs"
required-features = ["cli"]

[profile.dev]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
panic = "unwind"
incremental = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
strip = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "std"], optional = true }
indicatif = "0.18.4"
prost = "0.14.3"
rayon = "1.12.0"
regex-lite = "0.1.9"
rstar = "0.12.2"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true }
ttf-parser = { version = "0.25.1", features = ["std"] }

[dev-dependencies]
tar = "0.4.45"
tempfile = "3.27.0"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:serde_json", "dep:serde"]
